--- a/README.org
+++ b/README.org
@@ -74,9 +74,12 @@ contribution and advice are more than welcome.
   place you back in char mode, to resume normal terminal interaction.
 
 * Installing
-This will be a package when I get around to it.  But until then:
 
-clone this into you emacs load path somewhere, then:
+Install multi-term via your favorite method http://www.emacswiki.org/emacs/MultiTerm
+
+Emux will be a package when I get around to it.  But until then:
+
+clone this repo into you emacs load path somewhere, then:
 
     (require 'emux)
 
